force-app/main/default/objects/BDL_Alliance_Project__c/BDL_Alliance_Project__c.object-meta.xml
<CustomObject>
    <description>This object is tracking all project relevant topics for Alliance Managers like: Obligations, Health Status, Steering Commitees, Task Assignments, Documentsharing and more. Demen S. March 27th 2023</description>
    <label>Alliance Project</label>
    <nameField>
        <label>Alliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alliances Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>