force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Asset__c.field-meta.xml
<CustomField>
    <fullName>BDL_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for this projects main asset.
Demen S. 27th March 2023</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Alliances Projects</relationshipLabel>
    <relationshipName>Alliances_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>