force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Deadline__c.field-meta.xml
<CustomField>
    <fullName>BDL_Deadline__c</fullName>
    <description>Deadline of this alliances project for reporting purposes.
Demen S. 27th March 2023.</description>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>