force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Deal__c.field-meta.xml
<CustomField>
    <fullName>BDL_Deal__c</fullName>
    <description>A closed Opportunity which is now considered a deal, related to the Project.
Demen S. 27th March 2023.</description>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Alliances Projects</relationshipLabel>
    <relationshipName>Alliances_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>