force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Description__c.field-meta.xml
<CustomField>
    <fullName>BDL_Description__c</fullName>
    <description>Important information regarding this project.
Demen S. 27th March 2023</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>