force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>BDL_Exceptions__c</fullName>
    <description>Any territory or other exceptions for this particular alliances project.
Demen S. 27th March 2023.</description>
    <label>Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>