force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Goals__c.field-meta.xml
<CustomField>
    <fullName>BDL_Goals__c</fullName>
    <description>Specific Goals for this Alliances Project.
Demen S. 27th March 2023.</description>
    <label>Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>