force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Kickoff__c.field-meta.xml
<CustomField>
    <fullName>BDL_Kickoff__c</fullName>
    <description>Kickoff date for this Alliances Project.
Demen S. 27th March 2023.</description>
    <label>Kickoff</label>
    <type>Date</type>
</CustomField>