force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Phase__c.field-meta.xml
<CustomField>
    <fullName>BDL_Phase__c</fullName>
    <description>Current Alliances Project Phase. Using global value set BDL Project Phase.
Demen S. 27th March 2023.</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Project_Phase</valueSetName>
    </valueSet>
</CustomField>