force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Project_Status__c</fullName>
    <description>Project Status which will be used by formula field BDL_Project_Status_Indicator indicating a traffic light system. 
Demen S. 27th March 2023.</description>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>