force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Project_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>BDL_Project_Status_Indicator__c</fullName>
    <description>Formula field which turns project status (green, yellow, red) to a traffic light system, giving users the chance to quickly get an understanding of project health.
Demen S. 27th March 2023.</description>
    <formula>IMAGE(CASE( BDL_Project_Status__c , &quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;/img/samples/light_red.gif&quot;),&quot;Current Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status Indicator</label>
    <type>Text</type>
</CustomField>