force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Reason_for_Red_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Reason_for_Red_Status__c</fullName>
    <description>Text field which can be enforced to fill out by validation rule in case a project is red. 
Demen S. 27th March 2023.</description>
    <label>Reason for Red Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>