force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Territories__c.field-meta.xml
<CustomField>
    <fullName>BDL_Territories__c</fullName>
    <description>List of Territories from global value set BDL_Territories.
Demen S. 27th March 2023.</description>
    <label>Territories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Territories</valueSetName>
    </valueSet>
</CustomField>