force-app/main/default/objects/BDL_Alliance_Project__c/fields/BDL_Type__c.field-meta.xml
<CustomField>
    <fullName>BDL_Type__c</fullName>
    <description>Deal Type for this Alliance Management Program.
Demen S. 27th March 2023.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Deal_Types</valueSetName>
    </valueSet>
</CustomField>