force-app/main/default/objects/BDL_Alliance_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BDL_Project_Status_Indicator__c</columns>
    <columns>BDL_Phase__c</columns>
    <columns>BDL_Territories__c</columns>
    <columns>BDL_Exceptions__c</columns>
    <columns>BDL_Kickoff__c</columns>
    <columns>BDL_Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>